Apply __glXDisp_GetVisualConfigs message patch From http://bugs.freedesktop.org/show_bug.cgi?id=13863

Problem was that the glxcmds.c __glXDisp_GetVisualConfigs
function left garbage in the tail end of the message used for extensions.